[milo] Fix frontpage logo issues
* Fixes issues where non-square logos are distorted.
* Adds rounded corners.

--- a/milo/frontend/appengine/static/buildbot/css/default.css
+++ b/milo/frontend/appengine/static/buildbot/css/default.css
@@ -768,9 +768,13 @@ pre.comments>a:active {
 }
 
 .project img {
-  width: 140px;
+  max-width: 140px;
   height: 140px;
   padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  display: block;
 }
 
 .project:hover {
